
plugins {
    id 'com.github.teruteru128.study.java-library-conventions'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.named('test') {
    // FFMでlibcryptoを叩くため。テストはクラスパス実行なのでALL-UNNAMED
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}
